--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 PORT = 8000
+CORS_ORIGIN = *
 MONGODB_URI=mongodb+srv://sajjadahmad5578:your-password@cluster0.ehumciu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
