--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 CORS_ORIGIN = *
 MONGODB_URI=mongodb+srv://sajjadahmad5578:your-password@cluster0.ehumciu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+ACCESS_TOKEN_SECRET = sajjad-ahmad
+REFRESH_TOKEN_SECRET = code-with-sajjad
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_EXPIRY = 10d
