--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 PORT = 8000
 CORS_ORIGIN = *
-MONGODB_URI=mongodb+srv://sajjadahmad5578:your-password@cluster0.ehumciu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=MONGO_URI=mongodb+srv://sajjadahmad5578:jBGHSPxzLDSKZNL6@cluster0.ehumciu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 ACCESS_TOKEN_SECRET = sajjad-ahmad
 REFRESH_TOKEN_SECRET = code-with-sajjad
 ACCESS_TOKEN_EXPIRY = 1d
