add refreshAccessToken endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,6 @@ REFRESH_TOKEN_SECRET = code-with-sajjad
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_EXPIRY = 10d
 
-CLOUDINARY_CLOUD_NAME= 
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME= dnjywnr6k
+CLOUDINARY_API_KEY=716216977274184
+CLOUDINARY_API_SECRET=rXh8xNVSHWoAZJFsRwdl0Hr5lvI
